argo-events/overlays/infra/patch-nats-streaming.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-controller
  namespace: argo-events
spec:
  template:
    spec:
      containers:
      - name: eventbus-controller
