argo-events/overlays/infra/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: github-eventsource-svc
           port:
             number: 12000
    host: webhook.140.238.216.140.nip.io
